# Rosalind

./: Taskfile.yml  rosalind.cabal
app/: Main.hs
data/: lgis.txt  mprt.txt  mrna.txt  orf.txt  prot.txt  prtm.txt  revp.txt  splc.txt
lib/: Cons.hs  Dna.hs  Fib.hs  Fibd.hs  Gc.hs  Grph.hs  Hamm.hs  Iev.hs  Iprb.hs  Lcsm.hs  Lexf.hs  Lgis.hs  Lia.hs  Mprt.hs  Mrna.hs  Orf.hs  Perm.hs  Prot.hs  Prtm.hs  Revc.hs  Revp.hs  Rna.hs  Splc.hs  Subs.hs  Util.hs
