cabal-version: 3.14
name: rosalind
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Cons
    Dna
    Fib
    Fibd
    Gc
    Grph
    Hamm
    Iev
    Iprb
    Lcsm
    Lia
    Mprt
    Mrna
    Perm
    Prot
    Prtm
    Revc
    Rna
    Splc
    Subs
    Util
    Orf

  hs-source-dirs: lib
  build-depends:
    base ^>=4.21.0.0,
    containers,
    parsec,
    text,

  default-language: GHC2024

executable rosalind
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.21.0.0,
    process,
    rosalind,
    text,

  hs-source-dirs: app
  default-language: GHC2024
