cabal-version: 3.14
name: rosalind
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Cons
    Dna
    Fib
    Fibd
    Gc
    Grph
    Hamm
    Iev
    Iprb
    Lcsm
    Lexf
    Lia
    Mprt
    Mrna
    Orf
    Perm
    Prot
    Prtm
    Revc
    Revp
    Rna
    Splc
    Subs
    Util

  hs-source-dirs: lib
  build-depends:
    base ^>=4.21.0.0,
    containers,
    parsec,
    text,
    vector,

  default-language: GHC2024

executable rosalind
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.21.0.0,
    process,
    rosalind,
    text,

  hs-source-dirs: app
  default-language: GHC2024
